# buythedip

./: .gitignore  README.md  install.sh  pyproject.toml
cry/: cry.py
crypto/: cry.py
crypto/api/: binance.py
