[tool.poetry]
name = "cry"
version = "0.1.0"
description = "trade with crypro"
authors = ["r0nny8000 <r0nny8000@bea2b.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fire = "^0.5.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"

[tool.poetry.scripts]
ws = "cry.cry:_main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
